<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="AppName">Kleegram</string>
    <string name="AppNameBeta">Kleegram</string>
    <string name="LanguageName">English</string>
    <string name="LanguageNameInEnglish">English</string>
    <string name="LanguageCode">en</string>
    <string name="YourPhone">Your phone</string>
    <string name="StartText">Please confirm your country code and enter your phone number.</string>
    <string name="ChooseCountry">Choose a country</string>
    <string name="WrongCountry">Wrong country code</string>
    <string name="YourCode">Your code</string>
    <string name="SentSmsCode">We\'ve sent an SMS with an activation code to your phone</string>
    <string name="CallText">We will call you in %1$d:%2$02d</string>
    <string name="Calling">Calling you...</string>
    <string name="Code">Code</string>
    <string name="WrongNumber">Wrong number?</string>
    <string name="DidNotGetTheCode">Didn\'t get the code?</string>
    <string name="YourName">Your name</string>
    <string name="RegisterText">Set up your first and last name</string>
    <string name="FirstName">First name (required)</string>
    <string name="LastName">Last name (optional)</string>
    <string name="CancelRegistration">Cancel registration</string>
    <string name="Settings">Settings</string>
    <string name="Contacts">Contacts</string>
    <string name="NewGroup">New Group</string>
    <string name="Yesterday">yesterday</string>
    <string name="NoResult">No results</string>
    <string name="NoChats">No chats yet...</string>
    <string name="NoChatsHelp">Start messaging by pressing the\nnew message button in the bottom right corner\nor tap the menu button for more options.</string>
    <string name="WaitingForNetwork">Waiting for network...</string>
    <string name="Connecting">Connecting...</string>
    <string name="Updating">Updating...</string>
    <string name="TelegramFaq"> پرسش و پاسخ تلگرام </string>
    <string name="NewSecretChat">New Secret Chat</string>
    <string name="AwaitingEncryption">Waiting for %s to get online...</string>
    <string name="EncryptionRejected">Secret chat cancelled</string>
    <string name="EncryptionProcessing">Exchanging encryption keys...</string>
    <string name="EncryptedChatStartedOutgoing">%s joined your secret chat.</string>
    <string name="EncryptedChatStartedIncoming">You joined the secret chat.</string>
    <string name="ClearHistory">Clear history</string>
    <string name="ClearHistoryCache">Delete from cache</string>
    <string name="DeleteChat">Delete and exit</string>
    <string name="DeleteChatUser">Delete chat</string>
    <string name="HiddenName">Deleted Account</string>
    <string name="SelectChat">Select Chat</string>
    <string name="PhotoTip">Tap and hold to view</string>
    <string name="CompatibilityChat">%1$s is using an older version of Kleegram, so secret photos will be shown in compatibility mode.\n\nOnce %2$s updates Kleegram, photos with timers for 1 minute or less will start working in \'Tap and hold to view\' mode, and you will be notified whenever the other party takes a screenshot.</string>
    <string name="SearchMessages">MESSAGES</string>
    <string name="Search">Search</string>
    <string name="MuteNotifications">Mute notifications</string>
    <string name="MuteFor">Mute for %1$s</string>
    <string name="UnmuteNotifications">Unmute</string>
    <string name="WillUnmuteIn">In %1$s</string>
    <string name="MuteDisable">Disable</string>
    <string name="Hashtags">HASHTAGS</string>
    <string name="Recent">RECENT</string>
    <string name="LinkPreview">Link preview</string>
    <string name="SetAsAdmin">Promote to admin</string>
    <string name="DescriptionInfoMega">You can provide an optional description for your group.</string>
    <string name="LeaveMega">Leave Group</string>
    <string name="DeleteMega">Delete Group</string>
    <string name="LeaveMegaMenu">Leave group</string>
    <string name="DeleteMegaMenu">Delete group</string>
    <string name="MegaDeleteInfo">You will lose all messages in this group.</string>
    <string name="MegaAdminsInfo">You can add administrators to help you manage your group. Tap and hold to remove them.</string>
    <string name="MegaDeleteAlert">Wait! Deleting this group will remove all members and all messages will be lost. Delete the group anyway?</string>
    <string name="ActionCreateMega">Group created</string>
    <string name="MegaAddedBy">un1 added you to this group</string>
    <string name="MegaLeaveAlert">Are you sure you want to leave the group?</string>
    <string name="GroupUserCantAdd">Sorry, you can\'t add this user to groups.</string>
    <string name="GroupUserAddLimit">Sorry, this group is full.</string>
    <string name="GroupUserLeftError">Sorry, this user decided to leave this group, so you cannot invite them back here.</string>
    <string name="GroupUserCantAdmin">Sorry, too many adminstrators in this group.</string>
    <string name="GroupUserCantBot">Sorry, too many bots in this group.</string>
    <string name="ActionMigrateFromGroup">This group was upgraded to a supergroup</string>
    <string name="ActionMigrateFromGroupNotify">%1$s was upgraded to a supergroup</string>
    <string name="NoBlockedGroup">Blocked users are removed from the group and can only come back if invited by an admin. Invite links don\'t work for them.</string>
    <string name="NewChannel">New Channel</string>
    <string name="EnterChannelName">Channel name</string>
    <string name="Comments">Comments</string>
    <string name="CommentsInfo">If you enable comments, people will be able to discuss your posts in the channel.</string>
    <string name="AddMutual">Add contacts to your channel</string>
    <string name="ChannelUsernameHelp">People can share this link with others and find your channel using Kleegram search.</string>
    <string name="ChannelUsernamePlaceholder">link</string>
    <string name="ChannelPrivateLinkHelp">People can join your channel by following this link. You can revoke the link any time.</string>
    <string name="DescriptionPlaceholder">Description</string>
    <string name="DescriptionInfo">You can provide an optional description for your channel.</string>
    <string name="ChannelPublic">Public Channel</string>
    <string name="ChannelPublicInfo">Public channels can be found in search, anyone can join them.</string>
    <string name="ChannelPrivate">Private Channel</string>
    <string name="ChannelPrivateInfo">Private channels can only be joined via an invite link.</string>
    <string name="ChannelLinkTitle">Link</string>
    <string name="ChannelInviteLinkTitle">Invite Link</string>
    <string name="ChannelAddMembers">Add members</string>
    <string name="LeaveChannel">Leave Channel</string>
    <string name="LeaveChannelMenu">Leave channel</string>
    <string name="ChannelSettings">Settings</string>
    <string name="ChannelJoin">JOIN</string>
    <string name="OpenChannelProfile">Channel info</string>
    <string name="ChannelBroadcast">Broadcast</string>
    <string name="ChannelComment">Comment</string>
    <string name="ShowDiscussion">show comments</string>
    <string name="ChannelAlertTitle">What is a Channel?</string>
    <string name="ChannelAlertText">Channels are a new tool for broadcasting your messages to large audiences.</string>
    <string name="ChannelAlertCreate">CREATE CHANNEL</string>
    <string name="LinkInUse">Sorry, this name is already taken.</string>
    <string name="LinkInvalid">Sorry, this name is invalid.</string>
    <string name="LinkInvalidShort">Channel names must have at least 5 characters.</string>
    <string name="LinkInvalidLong">The name must not exceed 32 characters.</string>
    <string name="LinkInvalidStartNumber">Channel names can\'t start with a number.</string>
    <string name="LinkChecking">Checking name…</string>
    <string name="LinkAvailable">%1$s is available.</string>
    <string name="ChannelMembers">Members</string>
    <string name="ChannelBlockedUsers">Blocked users</string>
    <string name="ChannelAdministrators">Administrators</string>
    <string name="ChannelDelete">Delete Channel</string>
    <string name="ChannelDeleteMenu">Delete channel</string>
    <string name="ChannelDeleteAlert">Wait! Deleting this channel will remove all members and all messages will be lost. Delete the channel anyway?</string>
    <string name="ChannelLeaveAlert">Are you sure you want to leave the channel?</string>
    <string name="ChannelDeleteInfo">You will lose all messages in this channel.</string>
    <string name="ChannelEdit">Edit</string>
    <string name="ChannelWasPrivateAlert">Please note that if you choose a public link for your channel, anyone will be able to find it in search and join.\n\nDo not create this link if you want your channel to stay private.</string>
    <string name="ChannelPublicEmptyUsername">Please choose a link for your public channel, so that people can find it in search and share with others.\n\nIf you\'re not interested, we suggest creating a private channel instead.</string>
    <string name="ActionCreateChannel">Channel created</string>
    <string name="ActionChannelChangedPhoto">Channel photo changed</string>
    <string name="ActionChannelRemovedPhoto">Channel photo removed</string>
    <string name="ActionChannelChangedTitle">Channel name changed to un2</string>
    <string name="ChannelPublicLimitReached">Sorry, you have created too many public channels. You can either create a private channel or delete one of your existing channels first.</string>
    <string name="ChannelModerator">Moderator</string>
    <string name="ChannelCreator">Creator</string>
    <string name="ChannelEditor">Administrator</string>
    <string name="ChannelMute">MUTE</string>
    <string name="ChannelUnmute">UNMUTE</string>
    <string name="ChannelAddAdmin">Add Administrator</string>
    <string name="ChannelInviteViaLink">Invite via Link</string>
    <string name="ChannelAddUserAdminAlert">Are you sure you want to make %1$s an administrator?</string>
    <string name="ChannelRemoveUserAdmin">Remove</string>
    <string name="ChannelMembersInfo">Only channel administrators can see this list.</string>
    <string name="ChannelAdminNotParticipant">This user hasn\'t joined the channel yet. Do you want to invite them?</string>
    <string name="ChannelLinkInfo">Anyone who has Kleegram installed will be able to join your channel by following this link.</string>
    <string name="ChannelAdminsInfo">You can add administrators to help you manage your channel. Tap and hold to remove admins.</string>
    <string name="ChannelJoinTo">Do you want to join the channel \'%1$s\'?</string>
    <string name="settings_suggestions">بازخورد</string>
    <string name="settings_rate_app">امتیاز دهی</string>
    <string name="contact_us">تماس با ما</string>
    <string name="contact_us_name">سرویس ارتباطی کلیک - شرکت ارتباطاتی ضحی کیش</string>
    <string name="contact_us_email">Email: info@96868696.ir</string>
    <string name="contact_us_phone">tel: 021-96869696</string>
    <string name="contact_us_qq">QQ : 122429471</string>
    <string name="contact_us_address">Address : Jordan, Tehran, Iran</string>
    <string name="yek">10000 ریال</string>
    <string name="dow">20000 ریال</string>
    <string name="panj">50000 ریال</string>
    <string name="dah">100000 ریال</string>
    <string name="bist">200000 ریال</string>
    <string name="operator_spinner">Operators</string>
    <string name="balance_text">باقیمانده اعتبار</string>
    <string name="support_text">تماس با پشتیبانی</string>
    <string name="charg_text">خرید اعتبار</string>
    <string name="global_check_item">کلیک برای تمام تماس ها</string>
    <string name="autoanswer_check_item">اتصال خودکار تماس دریافتی از کلیک</string>
    <string name="guid_text">راهنما</string>
</resources>