<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:fadingEdge="none"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="7dp"
                android:padding="3dp"
                android:scaleType="fitCenter"
                android:src="@drawable/mhp_logo_safhe" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AppName"
                    android:textColor="@color/black_color"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="3.3.2"
                    android:textColor="@color/gray_color"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="27dp"
                android:background="@drawable/bg_dialog_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/operators"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:entries="@array/operator_array"
                    android:popupBackground="@android:color/transparent"
                    android:prompt="@string/operator_spinner" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:src="@drawable/icon_down_arrow" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/mhp_bg_setting_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="3dp">

                <CheckBox
                    android:id="@+id/globalCallback"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:button="@drawable/mhp_bg_checkbox"
                    android:gravity="right|center_vertical"
                    android:text="@string/global_check_item" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/mhp_bg_setting_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="3dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="3dp">

                <CheckBox
                    android:id="@+id/isAutoAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/mhp_bg_checkbox"
                    android:textColor="@android:color/black"
                    android:gravity="right|center_vertical"
                    android:text="@string/autoanswer_check_item" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_charg"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginRight="-5dp"
                    android:background="@drawable/mhp_bg_setting_button"
                    android:paddingBottom="3dp"
                    android:paddingLeft="12dp"
                    android:textColor="@android:color/black"
                    android:paddingRight="12dp"
                    android:paddingTop="3dp"
                    android:text="@string/charg_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_balance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginRight="-5dp"
                    android:background="@drawable/mhp_bg_setting_button"
                    android:paddingBottom="3dp"
                    android:paddingLeft="12dp"
                    android:textColor="@android:color/black"
                    android:paddingRight="12dp"
                    android:paddingTop="3dp"
                    android:text="@string/balance_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_support"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginRight="-5dp"
                    android:background="@drawable/mhp_bg_setting_button"
                    android:paddingBottom="3dp"
                    android:paddingLeft="12dp"
                    android:textColor="@android:color/black"
                    android:paddingRight="12dp"
                    android:paddingTop="3dp"
                    android:text="@string/support_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_guid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginRight="-5dp"
                    android:background="@drawable/mhp_bg_setting_button"
                    android:paddingBottom="3dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="3dp"
                    android:visibility="gone"
                    android:text="@string/guid_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings_suggestions_view"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_dialog_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:padding="9dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_settings_suggestions" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/settings_suggestions"
                    android:textColor="@color/home_item_deep_color"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_right_arrow" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settings_rate_app_view"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/bg_dialog_button"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:padding="9dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_settings_rate_app" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/settings_rate_app"
                    android:textColor="@color/home_item_deep_color"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/icon_right_arrow" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="17dp"
            android:text="@string/contact_us"
            android:textColor="@color/home_text_deep_color"
            android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginTop="7dp"
                android:text="@string/contact_us_name"
                android:textColor="@color/home_text_light_color"
                android:textSize="14sp"
                android:drawableLeft="@drawable/zohakish_logo"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="10dp"
            android:text="@string/contact_us_email"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="7dp"
            android:text="@string/contact_us_phone"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="7dp"
            android:text="@string/contact_us_qq"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="7dp"
            android:text="@string/contact_us_address"
            android:textColor="@color/home_text_light_color"
            android:textSize="14sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/btn_sipax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent_full"
            android:src="@drawable/icon_sipax"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>